[PAY-1641] Fix social overlap (#5962)

--- a/packages/web/src/components/track/desktop/ConnectedTrackTile.module.css
+++ b/packages/web/src/components/track/desktop/ConnectedTrackTile.module.css
@@ -57,6 +57,7 @@
   flex: 1 1 100%;
   min-width: 0;
   justify-content: flex-start;
+  margin-right: var(--unit-12);
 }
 
 .iconKebabHorizontal path {
